fix: remove extra padding

--- a/assets/main.css
+++ b/assets/main.css
@@ -31,7 +31,7 @@ body {
 }
 
 .container {
-  max-width: 1440px !important;
+  max-width: 1142px !important;
   margin: 0 auto;
   padding: 0 20px;
 }
