--- a/styles/featured-products.scss
+++ b/styles/featured-products.scss
@@ -21,23 +21,13 @@
   .product-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 20px;
     justify-content: center;
     overflow: hidden;
     align-items: stretch;
 
     @include breakpoint('md') {
-      grid-template-columns: repeat(3, 1fr);
-      gap: 15px;
-      padding: 0 40px;
-    }
-    @include breakpoint('lg') {
-      grid-template-columns: repeat(3, 1fr);
-      padding: 0 70px;
-    }
-
-    @include breakpoint('xl') {
-      padding: 0 150px;
+      gap: 29px;
     }
 
     .product-block {
@@ -48,7 +38,6 @@
       position: relative;
 
       .product-thumbnail {
-        border: 1px solid #EFEFEF;
         border-radius: 3px;
         position: relative;
         overflow: hidden;
@@ -108,8 +97,7 @@
 
       .prices {
         display: flex;
-        flex-direction: column;
-        align-items: start;
+        align-items: center;
         gap: 7px;
         margin-top: 12px;
         padding: 0 6px;
@@ -121,7 +109,7 @@
         }
 
         @include breakpoint('lg') {
-          flex-direction: row;
+          flex-direction: column;
           justify-content: center;
         }
 
